fixed books alignment

--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1049,6 +1049,7 @@ body {
   list-style: none;
   align-items: center;
   overflow: hidden;
+  align-items: baseline;
 }
 @media only screen and (min-width: 768px) {
   .book-card__section {
